--- a/src/styles/selectDropdown.scss
+++ b/src/styles/selectDropdown.scss
@@ -2,9 +2,9 @@
 .select-dropdown {
     color: $darkcolor;
     position: absolute;
-    top: calc(100% + 22px);
+    top: 16px;
     width: 260px;
-    left: -31px;
+    left: 0px;
     font-size: 14px;
     border: 1px solid $cloudyblue;
     box-shadow: $shadow 0px 0px 20px 0;
